--- a/projects/ng-mat-select-infinite-scroll/package.json
+++ b/projects/ng-mat-select-infinite-scroll/package.json
@@ -1,16 +1,8 @@
 {
-  "name": "ng-mat-select-infinite-scroll",
+  "name": "@r-Howitzer/ng-mat-select-infinite-scroll",
   "version": "5.0.0",
   "description": "Adds missing infinite scroll functionality for the angular material select component",
   "author": "Haidar Zeineddine",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/HaidarZ/ng-mat-select-infinite-scroll.git"
-  },
-  "bugs": {
-    "url": "https://github.com/HaidarZ/ng-mat-select-infinite-scroll/issues"
-  },
-  "homepage": "https://github.com/HaidarZ/ng-mat-select-infinite-scroll",
   "keywords": [
     "angular",
     "angular-material",
