--- a/angular.json
+++ b/angular.json
@@ -3,23 +3,23 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-mat-select-infinite-scroll": {
+    "heyreach-ng-mat-select-infinite-scroll": {
       "projectType": "library",
-      "root": "projects/ng-mat-select-infinite-scroll",
-      "sourceRoot": "projects/ng-mat-select-infinite-scroll/src",
+      "root": "projects/heyreach-ng-mat-select-infinite-scroll",
+      "sourceRoot": "projects/heyreach-ng-mat-select-infinite-scroll/src",
       "prefix": "ms",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "project": "projects/ng-mat-select-infinite-scroll/ng-package.json"
+            "project": "projects/heyreach-ng-mat-select-infinite-scroll/ng-package.json"
           },
           "configurations": {
             "production": {
-              "tsConfig": "projects/ng-mat-select-infinite-scroll/tsconfig.lib.prod.json"
+              "tsConfig": "projects/heyreach-ng-mat-select-infinite-scroll/tsconfig.lib.prod.json"
             },
             "development": {
-              "tsConfig": "projects/ng-mat-select-infinite-scroll/tsconfig.lib.json"
+              "tsConfig": "projects/heyreach-ng-mat-select-infinite-scroll/tsconfig.lib.json"
             }
           },
           "defaultConfiguration": "production"
@@ -27,9 +27,9 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/ng-mat-select-infinite-scroll/src/test.ts",
-            "tsConfig": "projects/ng-mat-select-infinite-scroll/tsconfig.spec.json",
-            "karmaConfig": "projects/ng-mat-select-infinite-scroll/karma.conf.js"
+            "main": "projects/heyreach-ng-mat-select-infinite-scroll/src/test.ts",
+            "tsConfig": "projects/heyreach-ng-mat-select-infinite-scroll/tsconfig.spec.json",
+            "karmaConfig": "projects/heyreach-ng-mat-select-infinite-scroll/karma.conf.js"
           }
         }
       }
@@ -131,5 +131,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
