--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "heyreach-ng-mat-select-infinite-scroll",
-  "version": "5.0.0",
+  "name": "@r-Howitzer/ng-mat-select-infinite-scroll",
+  "version": "5.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
